Fixing rendering issue on mobile - added negative margin-top to h1

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -203,7 +203,8 @@ body {
         margin: 2rem auto; } }
   .home-headline {
     font-size: 2.5rem;
-    margin-top: 1.5rem; }
+    color: orangered;
+    margin-top: -1.5rem; }
     .home-headline--gradient {
       background: linear-gradient(to right, #441d8c 0%, #546ead 100%);
       -webkit-background-clip: text;
